System tray icon.

--- a/UptimeClient/MainForm.resx
+++ b/UptimeClient/MainForm.resx
@@ -117,4 +117,184 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="notifyIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAYAICAQAAEABADoAgAAZgAAABAQEAABAAQAKAEAAE4DAAAgIAAAAQAIAKgIAAB2BAAAEBAAAAEA
+        CABoBQAAHg0AACAgAAABACAAqBAAAIYSAAAQEAAAAQAgAGgEAAAuIwAAKAAAACAAAABAAAAAAQAEAAAA
+        AAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIAAAACAgACAAAAAgACAAICAAACAgIAAwMDAAAAA
+        /wAA/wAAAP//AP8AAAD/AP8A//8AAP///wAAAAAAAA//////8AAAAAAAAAAAAA/////////wAAAAAAAA
+        AA//+I7u7uiP//AAAAAAAAD/+O7u7u7u7o//AAAAAAAP+O7u7u7u7u7uj/AAAAAA/47u7u7u7u7u7uj/
+        AAAAD/ju7u7u///u7u7uj/AAAP+O7u7u7v//7u7u7uj/AAD/7u7u7u7//+7u7u7u/wAP+O7u7u7u///u
+        7u7u7o/wD/7u7u7u7v//7u7u7u7v8P+O7u7u7u7//+7u7u7u6P//ju7u7u7u///u7u7u7uj//+7u7u7u
+        7v//7u7u7u7u///u7u7u7u7//+7u7u7u7v//7u7u7u7u///u7u7u7u7//+7u7u7u7v//7u7u7u7u///u
+        7u7u7u7//+7u7u7u7v//7u7u7u7u///u7u7u7u7//47u7u7u7v//7u7u7u7o//+O7u7u7u7u7u7u7u7u
+        6P8P/u7u7u7u7u7u7u7u7u/wD/ju7u7u7o/47u7u7u6P8AD/7u7u7u7//+7u7u7u/wAA/47u7u7u///u
+        7u7u6P8AAA/47u7u7o/47u7u7o/wAAAA/47u7u7u7u7u7uj/AAAAAA/47u7u7u7u7u6P8AAAAAAA//ju
+        7u7u7u6P/wAAAAAAAA//+I7u7uiP//AAAAAAAAAAD/////////AAAAAAAAAAAAAP//////AAAAAAAP/g
+        B///gAH//gAAf/wAAD/4AAAf8AAAD+AAAAfAAAADwAAAA4AAAAGAAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAGAAAABwAAAA8AAAAPgAAAH8AAAD/gAAB/8AAA//gAAf/+A
+        Af//4Af/KAAAABAAAAAgAAAAAQAEAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIAAAACA
+        gACAAAAAgACAAICAAACAgIAAwMDAAAAA/wAA/wAAAP//AP8AAAD/AP8A//8AAP///wAAAA////AAAAAP
+        iO7uiPAAAPju7u7ujwAPju7v/u7o8Aju7u/+7u6A+O7u7/7u7o/+7u7v/u7u7/7u7u/+7u7v/u7u7/7u
+        7u/+7u7v/u7u7/ju7u7u7u6PCO7u7/7u7oAPju7v/u7o8AD47u7u7o8AAA+I7u6I8AAAAA////AAAPgf
+        AADgBwAAwAMAAIABAACAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAEAAIABAADAAwAA4AcAAPgf
+        AAAoAAAAIAAAAEAAAAABAAgAAAAAAAAEAAAAAAAAAAAAAAABAAAAAQAAAAAAAOKgGgDjpSgA6LteAOrA
+        bADrxXoA8dCMAO3RlQDw27EA9fHoAPb29gD4+PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AAAAAAAAAAAAAAAACwsK
+        CgoKCgoLCwAAAAAAAAAAAAAAAAAAAAAAAAAACgoKCgoKCgoKCgoKCgoAAAAAAAAAAAAAAAAAAAAACwoK
+        CQcDAgEBAQECAwcJCgoLAAAAAAAAAAAAAAAAAAoKCQQBAQEBAQEBAQEBAQEECQoKAAAAAAAAAAAAAAAK
+        CggCAQEBAQEBAQEBAQEBAQECCAoKAAAAAAAAAAAACgoFAQEBAQEBAQEBAQEBAQEBAQEBBQoKAAAAAAAA
+        AAoKBQEBAQEBAQEBCwsLCwEBAQEBAQEBBQoKAAAAAAALCggBAQEBAQEBAQELCwsLAQEBAQEBAQEBCAoL
+        AAAAAAoJAgEBAQEBAQEBAQsLCwsBAQEBAQEBAQECCQoAAAAKCgQBAQEBAQEBAQEBCwsLCwEBAQEBAQEB
+        AQEECgoAAAoJAQEBAQEBAQEBAQELCwsLAQEBAQEBAQEBAQEJCgALCgcBAQEBAQEBAQEBAQsLCwsBAQEB
+        AQEBAQEBAQcKCwsKAwEBAQEBAQEBAQEBCwsLCwEBAQEBAQEBAQEBAwoLCgoCAQEBAQEBAQEBAQELCwsL
+        AQEBAQEBAQEBAQECCgoKCgEBAQEBAQEBAQEBAQsLCwsBAQEBAQEBAQEBAQEKCgoKAQEBAQEBAQEBAQEB
+        CwsLCwEBAQEBAQEBAQEBAQoKCgoBAQEBAQEBAQEBAQELCwsLAQEBAQEBAQEBAQEBCgoKCgEBAQEBAQEB
+        AQEBAQsLCwsBAQEBAQEBAQEBAQEKCgoKAgEBAQEBAQEBAQEBCwsLCwEBAQEBAQEBAQEBAgoKCwoDAQEB
+        AQEBAQEBAQELCwsLAQEBAQEBAQEBAQEDCgsLCgcBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQcKCwAK
+        CQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBCQoAAAoKBAEBAQEBAQEBAQEGCwsGAQEBAQEBAQEBAQQK
+        CgAAAAoJAgEBAQEBAQEBAQsLCwsBAQEBAQEBAQECCQoAAAAACwoIAQEBAQEBAQEBCwsLCwEBAQEBAQEB
+        AQgKCwAAAAAACgoFAQEBAQEBAQEGCwsGAQEBAQEBAQEFCgoAAAAAAAAACgoFAQEBAQEBAQEBAQEBAQEB
+        AQEBBQoKAAAAAAAAAAAACgoIAgEBAQEBAQEBAQEBAQEBAggKCgAAAAAAAAAAAAAACgoJBAEBAQEBAQEB
+        AQEBAQQJCgoAAAAAAAAAAAAAAAAACwoKCQcDAgEBAQECAwcJCgoLAAAAAAAAAAAAAAAAAAAAAAoKCgoK
+        CgoKCgoKCgoKAAAAAAAAAAAAAAAAAAAAAAAAAAALCwoKCgoKCgsLAAAAAAAAAAAAAAD/4Af//4AB//4A
+        AH/8AAA/+AAAH/AAAA/gAAAHwAAAA8AAAAOAAAABgAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACAAAABgAAAAcAAAAPAAAAD4AAAB/AAAA/4AAAf/AAAP/4AAH//gAH//+AH/ygA
+        AAAQAAAAIAAAAAEACAAAAAAAAAEAAAAAAAAAAAAAAAEAAAABAAAAAAAA4qEbAOi8XwDqwW0A68Z7APHh
+        vwD29vYA+Pj4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8AAAAAAAAHBgYGBgcAAAAAAAAA
+        AAYFAgEBAQECBQYAAAAAAAYEAQEBAQEBAQEEBgAAAAYDAQEBAQcHAQEBAQQGAAAFAQEBAQEHBwEBAQEB
+        BQAHAgEBAQEBBwcBAQEBAQIHBgEBAQEBAQcHAQEBAQEBBgYBAQEBAQEHBwEBAQEBAQYGAQEBAQEBBwcB
+        AQEBAQEGBgEBAQEBAQcHAQEBAQEBBgcCAQEBAQEBAQEBAQEBAgcABQEBAQEBBwcBAQEBAQUAAAYEAQEB
+        AQcHAQEBAQQGAAAABgMBAQEBAQEBAQQGAAAAAAAGBQIBAQEBAgUGAAAAAAAAAAAHBgYGBgcAAAAAAPgf
+        AADgBwAAwAMAAIABAACAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAEAAIABAADAAwAA4AcAAPgf
+        AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29jD29vaA9vb2v/b29v/29vb/9vb2//b29v/29vb/9vb2//b2
+        9r/29vaA9vb2MAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29mD29vbP9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b2
+        9v/29vb/9vb2//b29v/29vb/9vb2z/b29lAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29iD29va/9vb2//b29v/18ej/7dGV/+i7Xv/jpSj/4qAa/+Kg
+        Gv/ioBr/4qAa/+OlKP/ou17/7dGV//Xx6P/29vb/9vb2//b29r/29vYgAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vZQ9vb27/b29v/18ej/6sBs/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+rAbP/18ej/9vb2//b29u/29vZQAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9vb2YPb29v/29vb/8Nux/+OlKP/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+OlKP/w27H/9vb2//b2
+        9v/29vZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29lD29vb/9vb2/+vFev/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/rxXr/9vb2//b29v/29vZQAAAAAAAAAAAAAAAAAAAAAAAAAAD29vYg9vb27/b29v/rxXr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv//////////////////////4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/rxXr/9vb2//b29u/29vYgAAAAAAAAAAAAAAAAAAAAAPb29r/29vb/8Nux/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa///////////////////////ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/w27H/9vb2//b29r8AAAAAAAAAAAAAAAD29vZg9vb2//Xx
+        6P/jpSj/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr//////////////////////+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+OlKP/18ej/9vb2//b29lAAAAAAAAAAAPb2
+        9s/29vb/6sBs/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv//////////////
+        ////////4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+rAbP/29vb/9vb2zwAA
+        AAD29vYw9vb2//Xx6P/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa////
+        ///////////////////ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa//Xx
+        6P/29vb/9vb2MPb29oD29vb/7dGV/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr//////////////////////+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/7dGV//b29v/29vaA9vb2v/b29v/ou17/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv//////////////////////4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ou17/9vb2//b29r/29vb/9vb2/+OlKP/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa///////////////////////ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+OlKP/29vb/9vb2//b29v/29vb/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr//////////////////////+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa//b29v/29vb/9vb2//b29v/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv//////////////////////4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/9vb2//b29v/29vb/9vb2/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa////////////////////
+        ///ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/29vb/9vb2//b2
+        9v/29vb/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/////////
+        /////////////+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa//b2
+        9v/29vb/9vb2//b29v/jpSj/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv//////////////////////4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/jpSj/9vb2//b29v/29va/9vb2/+i7Xv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa///////////////////////ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+i7Xv/29vb/9vb2v/b29oD29vb/7dGV/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/7dGV//b29v/29vaA9vb2MPb29v/18ej/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/18ej/9vb2//b29jAAAAAA9vb2z/b29v/qwGz/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa//HQjP////////////HQjP/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/6sBs//b29v/29vbPAAAAAAAAAAD29vZg9vb2//Xx
+        6P/jpSj/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr//////////////////////+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+OlKP/18ej/9vb2//b29mAAAAAAAAAAAAAA
+        AAD29va/9vb2//Dbsf/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv//////////////
+        ////////4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/8Nux//b29v/29va/AAAAAAAA
+        AAAAAAAAAAAAAPb29iD29vbv9vb2/+vFev/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa//HQ
+        jP////////////HQjP/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+vFev/29vb/9vb27/b2
+        9iAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29lD29vb/9vb2/+vFev/ioBr/4qAa/+KgGv/ioBr/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/rxXr/9vb2//b2
+        9v/29vZQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29mD29vb/9vb2//Dbsf/jpSj/4qAa/+Kg
+        Gv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/jpSj/8Nux//b2
+        9v/29vb/9vb2YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29lD29vbv9vb2//Xx
+        6P/qwGz/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/4qAa/+KgGv/ioBr/6sBs//Xx
+        6P/29vb/9vb27/b29lAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb2
+        9iD29va/9vb2//b29v/18ej/7dGV/+i7Xv/jpSj/4qAa/+KgGv/ioBr/4qAa/+OlKP/ou17/7dGV//Xx
+        6P/29vb/9vb2//b29r/29vYgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD29vZg9vb2z/b29v/29vb/9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b2
+        9v/29vb/9vb2//b29s/29vZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9vb2MPb29oD29va/9vb2//b29v/29vb/9vb2//b2
+        9v/29vb/9vb2v/b29oD29vYwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/A
+        A///AAD//AAAP/gAAB/wAAAP4AAAB8AAAAPAAAADgAAAAYAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAABgAAAAcAAAAPAAAAD4AAAB/AAAA/4AAAf/AAAP/8A
+        AP//wAP/KAAAABAAAAAgAAAAAQAgAAAAAABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD29vZg9vb2v/b29v/29vb/9vb2//b29v/29va/9vb2YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb2
+        9iD29vbP8eG//+i8X//ioRv/4qEb/+KhG//ioRv/6Lxf//Hhv//29vbP9vb2IAAAAAAAAAAAAAAAAPb2
+        9iD29vbv68Z7/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/68Z7//b29u/29vYgAAAAAAAA
+        AAD29vbP6sFt/+KhG//ioRv/4qEb/+KhG////////////+KhG//ioRv/4qEb/+KhG//rxnv/9vb2zwAA
+        AAD29vZg8eG//+KhG//ioRv/4qEb/+KhG//ioRv////////////ioRv/4qEb/+KhG//ioRv/4qEb//Hh
+        v//29vZg9vb2v+i8X//ioRv/4qEb/+KhG//ioRv/4qEb////////////4qEb/+KhG//ioRv/4qEb/+Kh
+        G//ovF//9vb2v/b29v/ioRv/4qEb/+KhG//ioRv/4qEb/+KhG////////////+KhG//ioRv/4qEb/+Kh
+        G//ioRv/4qEb//b29v/29vb/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv////////////ioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//29vb/9vb2/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb////////////4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/9vb2//b29v/ioRv/4qEb/+KhG//ioRv/4qEb/+KhG////////////+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb//b29v/29va/6Lxf/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb/+i8X//29va/9vb2YPHhv//ioRv/4qEb/+KhG//ioRv/4qEb////
+        ////////4qEb/+KhG//ioRv/4qEb/+KhG//x4b//9vb2YAAAAAD29vbP68Z7/+KhG//ioRv/4qEb/+Kh
+        G////////////+KhG//ioRv/4qEb/+KhG//rxnv/9vb2zwAAAAAAAAAA9vb2IPb29u/qwW3/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//rxnv/9vb27/b29iAAAAAAAAAAAAAAAAD29vYg9vb2z/Hh
+        v//ovF//4qEb/+KhG//ioRv/4qEb/+i8X//x4b//9vb2z/b29iAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD29vZg9vb2v/b29v/29vb/9vb2//b29v/29va/9vb2YAAAAAAAAAAAAAAAAAAAAADwDwAAwAMAAIAB
+        AACAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAAgAEAAMADAADwDwAA
+</value>
+  </data>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>123, 17</value>
+  </metadata>
 </root>
